--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker-build": "docker build -t habittrove .",
     "docker-run": "docker run -p 3000:3000 -v $(pwd)/data:/app/data habittrove",
     "prepare": "husky",
+    "pretty": "prettier --write .",
     "setup:dev": "if ! command -v bun > /dev/null; then echo 'Installing bun...'; curl -fsSL https://bun.sh/install | bash; fi && npm install --force && npm run typecheck && npm run lint"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "lucide-react": "^0.469.0",
     "luxon": "^3.5.0",
     "next": "15.1.3",
+    "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-confetti": "^6.2.2",
     "react-day-picker": "^8.10.1",
